hzCmd